# sport-arena-event-booking

./: .env  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  test.db
event_ez/: .env  pyproject.toml  test.db
event_ez/app/: dependencies.py  main.py
event_ez/app/core/: auth.py  database.py
event_ez/app/models/: bookings.py  session.py  user.py  venue_owner.py
event_ez/app/routes/: bookings.py  sessions.py  user.py  venue.py
event_ez/app/schemas/: bookings.py  user.py  venue_hours.py
event_ez/app/services/: bookings.py  session.py  user.py
frontend/: .env.local  .gitignore  README.md  next.config.js  openapi.json  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo  config.json
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/app/: layout.tsx  page.tsx
frontend/app/booking/: page.js  page.tsx
frontend/app/confirmation/: page.js
frontend/app/create-venue/: page.tsx
frontend/app/home-page/: page.tsx
frontend/app/login/: page.tsx
frontend/app/my-booking/: page.js
frontend/app/signup/: page.tsx
frontend/app/summary/: page.js  page.tsx
frontend/app/update-user/: page.tsx
frontend/app/user-dashboard/: page.tsx
frontend/app/user-profile/: page.tsx
frontend/app/view-profile/: page.tsx
frontend/components/: Header.tsx  footer.tsx
frontend/components/ui/: common.tsx  gallery.tsx  logo.tsx  navigation.tsx  venue_detail.tsx
frontend/types/: api.d.ts
src/app/: main.py
(+54 files in other folders)
